src/github.com/ebay/akutan/query/parser/testdata/select/distinct/errors/unknown_kw.res
Query:
SELECT
    WHOAMI ?rim
WHERE {
    ?rim rdf:type products:rims
    ?rim <size> ?sz
}

Parsed:
Error: unable to parse query: line 2 column 5: expected ?
